Updated Github link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </div>
 
         <div id="footer">
-            <span><a href="https://github.com/h-eriksson/gameplan">&copy; Henrik Eriksson 2024</a><br> Updated: <span id="updated"></span></span>
+            <span><a href="https://github.com/h-eriksson/gameplanv2">&copy; Henrik Eriksson 2024</a><br> Updated: <span id="updated"></span></span>
         </div>
     </body>
 </html>
