Added progress indicator for milestones

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             <div id="milestoneList">
                 <!-- Dynamically built list -->
             </div>
+            <div id="milestoneProgress"></div>
         </div>
 
         <div id="taskProgress" class="progress"></div>
